# fcm_receiver.rs

./: README.md  TECHNICAL.md
example/: Cargo.toml  device_credentials.json
example/src/: main.rs
fcm_receiver_rs/: Cargo.toml
fcm_receiver_rs/src/: client.rs  consts.rs  crypto.rs  encryption.rs  error.rs  fun.rs  http_client.rs  lib.rs  proto.rs  socket_handler.rs  util.rs
fcm_receiver_rs/src/messages/: builders.rs  marshal.rs  mod.rs  types.rs  unmarshal.rs
