[package]
name = "fcm_receiver_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = "1"
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["blocking", "json", "gzip", "deflate"] }
rodio = "0.21.1"
url = "2"
rand = "0.8"
p256 = { version = "0.13", features = ["pkcs8", "ecdh"] }
sha2 = "0.10"
hkdf = "0.12"
hmac = "0.12"
aes-gcm = { version = "0.10", features = ["aes"] }
hex = "0.4"
bytes = "1"
time = "0.3"
parking_lot = "0.12"
thiserror = "1"
anyhow = "1"
log = "0.4"
simplelog = "0.12"
native-tls = "0.2"
getrandom = "0.2"
prost = "0.12"
prost-types = "0.12"
ece = "2.3"

[lib]
name = "fcm_receiver_rs"
path = "src/lib.rs"
